Fix icons on left side not fitting on a smaller screen. Added go and stop text to slider. Moved table css into theme.css.
#story[1315] #pair[psu43, mgo65]

--- a/Visualizer/src/main/resources/css/raceView.css
+++ b/Visualizer/src/main/resources/css/raceView.css
@@ -4,26 +4,7 @@
  }
 
 
-.table-view {
-    -fx-background-color: transparent;
-    -fx-font-family: 'Quicksand', sans-serif, bold;
 
-}
-
-.table-view .column-header {
-    -fx-background-color: transparent;
-    -fx-font-family: 'Quicksand', sans-serif, bold;
-    -fx-font-size: 10pt;
-}
-
-
-.table-view .table-column {
-    -fx-alignment: CENTER;
-}
-
-.table-view .table-cell {
-    -fx-font-weight: bold;
-}
 
 
 #finish-list {
